# falcon-cli

./: Cargo.toml  LICENSE  README.md
specs/: 03-api-endpoints.md
src/: auth.rs  cli.rs  client.rs  config.rs  error.rs  main.rs  output.rs
src/commands/: alerts.rs  api_integrations.rs  aspm.rs  automated_lead.rs  cao_hunting.rs  case_management.rs  certificate_based_exclusions.rs  cloud_aws_registration.rs  cloud_azure_registration.rs  cloud_connect_aws.rs  cloud_google_cloud_registration.rs  cloud_oci_registration.rs  cloud_policies.rs  cloud_security.rs  cloud_security_assets.rs  cloud_security_compliance.rs  cloud_security_detections.rs  cloud_snapshots.rs  configuration_assessment.rs  configuration_assessment_evaluation_logic.rs  content_update_policies.rs  correlation_rules.rs  correlation_rules_admin.rs  cspm_registration.rs  custom_ioa.rs  custom_storage.rs  d4c_registration.rs  data_protection_configuration.rs  datascanner.rs  delivery_settings.rs  deployments.rs  detects.rs  device_content.rs  device_control_policies.rs  discover.rs  downloads.rs  drift_indicators.rs  event_streams.rs  exposure_management.rs  faas_execution.rs  (+58 more)
