[package]
name = "falcon-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool for CrowdStrike Falcon API"
repository = "https://github.com/hiboma/falcon-cli"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
